--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </section>
 
   <section id="servizi" class="card">
-    <h2>Descrizione del servizio</h2>
+    <h2>Descrizione dei servizi</h2>
     <p>Mettiamo a disposizione una piattaforma che permette a privati, professionisti e imprese di:</p>
     <ul>
       <li>Ottenere visure aziendali in tempo reale</li>
