--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
       --dark:#0d0d0d;
       --light:#f6f6f6;
       --accent:#1abc9c;
-      --maxw:1100px;
-      --shadow:0 2px 8px rgba(0,0,0,.1);
+      --maxw:960px;
+      --shadow:0 3px 10px rgba(0,0,0,.1);
       font-family:"Helvetica Neue",Arial,sans-serif;
     }
     body{margin:0;color:var(--dark);background:var(--light);height:100vh;overflow:hidden;}
-    header{background:var(--primary);color:#fff;padding:1rem 1rem;box-shadow:var(--shadow);}
-    header h1{margin:0;font-size:1.5rem;}
-    nav{margin-top:0.5rem;}
-    nav a{color:#fff;text-decoration:none;margin-right:1rem;font-size:0.9rem;}
-    main{max-width:var(--maxw);margin:0.8rem auto;padding:0 1rem;display:grid;grid-template-columns:1fr 1fr 1fr;gap:1rem;height:calc(100vh - 140px);}
-    section{margin:0;}
-    h2{color:var(--primary);margin:0 0 0.5rem 0;font-size:1.1rem;}
-    .card{background:#fff;border-radius:6px;padding:1rem;box-shadow:var(--shadow);height:fit-content;}
-    .card p{margin:0.5rem 0;font-size:0.9rem;line-height:1.4;}
-    .card ul{margin:0.5rem 0;padding-left:1.2rem;}
-    .card li{font-size:0.9rem;line-height:1.3;margin:0.3rem 0;}
+    header{background:var(--primary);color:#fff;padding:1.2rem 1rem;box-shadow:var(--shadow);}
+    header h1{margin:0;font-size:1.6rem;}
+    nav{margin-top:0.6rem}
+    nav a{color:#fff;text-decoration:none;margin-right:1rem}
+    main{max-width:var(--maxw);margin:0.8rem auto;padding:0 1rem;height:calc(100vh - 160px);overflow:hidden;}
+    section{margin-bottom:1.2rem}
+    h2{color:var(--primary);margin-bottom:0.3rem;font-size:1.1rem;}
+    .card{background:#fff;border-radius:6px;padding:1rem;box-shadow:var(--shadow)}
+    .card p{margin:0.4rem 0;font-size:0.9rem;line-height:1.3;}
+    .card ul{margin:0.4rem 0;padding-left:1.2rem;}
+    .card li{font-size:0.9rem;line-height:1.2;margin:0.2rem 0;}
     footer{background:#222;color:#ddd;text-align:center;padding:0.8rem 0.5rem;position:fixed;bottom:0;width:100%;font-size:0.8rem;}
-    footer a{color:#1abc9c;text-decoration:none;}
+    footer a{color:#1abc9c;text-decoration:none}
   </style>
 </head>
 <body>
