--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <main>
   <section id="azienda" class="card">
-    <h2>Ragione sociale</h2>
+    <h2>Azienda</h2>
     <p><strong>KGREEN SRL</strong> è un'azienda orientata all'innovazione green e allo sviluppo tecnologico. Operiamo come intermediari, fornendo soluzioni efficaci e immediate.</p>
     <p>Tra i nostri servizi, offriamo un servizio di intermediazione per la fornitura di report di valutazione aziendali.</p>
   </section>
